<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Space
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <LinearLayout
                android:id="@+id/layout_collapsable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_note1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:text="@string/txt_direction_note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_class_random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:checked="true"
                        android:text="@string/rbtn_class_random" />

                    <RadioButton
                        android:id="@+id/rbtn_math_random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/rbtn_math_random" />
                </RadioGroup>

                <TextView
                    android:id="@+id/txt_note2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:text="@string/txt_direction_note2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rangeslider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:contentDescription="@string/cont_desc_slider"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:values="@array/initial_slider_values" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etxt_min"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:tooltipText="Should be within a range of float type.">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/txt_min_val"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etxt_max"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:tooltipText="should be within a range of float type">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/txt_max_val"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_apply_value_to_slider"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:text="@string/btn_apply" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_note3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:text="@string/txt_direction_note3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:stepSize="1.0"
                    android:valueFrom="1"
                    android:valueTo="100.0" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_col_exp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:contentDescription="@string/cont_desc_btn_col_exp"
                app:icon="@drawable/ic_up_arrow" />

            <LinearLayout
                android:id="@+id/layout_option_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_once"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txt_try_once"
                    app:icon="@drawable/ic_single"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_mass"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txt_mass_case"
                    app:icon="@drawable/ic_multiple"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cont_desc_list_of_results"
                tools:listitem="@layout/recycler_view_item" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>